@@ -23,6 +23,8 @@
   * Tweaked coloring for vines, stems, tall grass, and lilypads
   * (internal) Use log4j for file logging and console error reporting
   * "Y" will bring up a window with a keyboard reference
+  * Explored highlighting will now key off of redstone torches,
+    Glowstone, and Jack-O-Lanterns, in addition to regular torches
 
 Minecraft X-Ray 3.3.3 (2011.09.23)
 
